[package]
name = "audit_sampling"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
approx = "0.5.1"
calamine = { version = "0.30.1", features = ["dates", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
csv = "1.3.1"
libc = "0.2.175"
rand = "0.9.2"
rust_xlsxwriter = "0.90.0"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
statrs = "0.18.0"
thiserror = "2.0.16"

[[bin]]
name = "audit-sampler"
path = "src/main.rs"
